.devcontainer/test/jinjaboard/errors/template_error.yaml.j2
cards:
  - type: markdown
    content: "{{ totally_undefined }}"
